Included H2 to Top

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		<section id="header">
 		<img src="images/john.png" alt="John" />
 		<div class="centered"><h1>John Mayer Tribute Page</h1></div>
+		<h2>REMOVE</h2>
 		<ul>
 		<li><a href="#earlylife">Early life</a></li>
 		<li><a href="#instrument">Instruments and equipment</a></li>
